--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^1.19.1",
-    "purgecss-webpack-plugin": "^1.6.0",
     "react-test-renderer": "^16.11.0",
     "style-loader": "^1.0.0",
+    "svg-sprite-loader": "^5.0.0",
+    "svg-transform-loader": "^2.0.13",
+    "svgo-loader": "^2.2.1",
     "tailwindcss": "^1.1.2",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
